# PeerBeat

./: .gitignore  CHANGELOG.md  README.md  flutter_rust_bridge.yaml  package-lock.json  pubspec.yaml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
apps/peerbeat/: README.md  analysis_options.yaml  flutter_rust_bridge.yaml  l10n.yaml  pubspec.yaml
apps/peerbeat/android/: build.gradle.kts
apps/peerbeat/android/app/: build.gradle.kts
apps/peerbeat/android/app/src/main/: AndroidManifest.xml
apps/peerbeat/android/app/src/main/kotlin/io/github/ramazanberk20/peerbeat/: MainActivity.kt
apps/peerbeat/android/app/src/main/res/values/: colors.xml
apps/peerbeat/android/app/src/main/res/xml/: file_paths.xml
apps/peerbeat/lib/: app_config.dart  main.dart
apps/peerbeat/lib/audio/: audio_engine.dart  replay_gain.dart
apps/peerbeat/lib/l10n/: app_ar.arb  app_de.arb  app_en.arb  app_es.arb  app_fr.arb  app_ja.arb  app_ko.arb  app_localizations.dart  app_localizations_ar.dart  app_localizations_de.dart  app_localizations_en.dart  app_localizations_es.dart  app_localizations_fr.dart  app_localizations_ja.dart  app_localizations_ko.dart  app_localizations_ru.dart  app_localizations_tr.dart  app_localizations_zh.dart  app_ru.arb  app_tr.arb  app_zh.arb
apps/peerbeat/lib/net/: party.dart  tofu.dart
apps/peerbeat/lib/os/: audio_handler.dart  desktop_shell.dart  os_media_controller.dart
apps/peerbeat/lib/playback/: player.dart
apps/peerbeat/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
apps/peerbeat/lib/src/rust/api/: audio.dart  library.dart  network.dart  system.dart
apps/peerbeat/lib/src/rust/db/: browse.dart  eq_presets.dart  folders.dart  playlists.dart  shares.dart  smart.dart  tracks.dart  transfer_log.dart
apps/peerbeat/lib/src/rust/net/: discovery.dart
apps/peerbeat/lib/ui/: edit_metadata.dart  library_home.dart  mini_player.dart  network_screen.dart  now_playing.dart  remote_library.dart  settings_screen.dart  sharing_screen.dart  smart_playlist.dart  text_input_dialog.dart  theme.dart  update_sheet.dart
apps/peerbeat/lib/update/: updater.dart
apps/peerbeat/lib/util/: log.dart
apps/peerbeat/linux/: CMakeLists.txt
apps/peerbeat/linux/flutter/: generated_plugins.cmake
apps/peerbeat/linux/runner/: my_application.cc
apps/peerbeat/rust_builder/: pubspec.yaml
apps/peerbeat/rust_builder/android/: build.gradle  settings.gradle
apps/peerbeat/rust_builder/android/src/main/: AndroidManifest.xml
apps/peerbeat/rust_builder/cargokit/gradle/: plugin.gradle
apps/peerbeat/rust_builder/ios/: peerbeat_core.podspec
apps/peerbeat/rust_builder/linux/: CMakeLists.txt
apps/peerbeat/rust_builder/macos/: peerbeat_core.podspec
apps/peerbeat/rust_builder/windows/: CMakeLists.txt
apps/peerbeat/test/: localization_test.dart  party_clock_test.dart  player_auto_advance_test.dart  replay_gain_test.dart  text_input_dialog_test.dart  updater_version_test.dart  widget_test.dart
apps/peerbeat/windows/: CMakeLists.txt
apps/peerbeat/windows/flutter/: generated_plugins.cmake
apps/peerbeat/windows/runner/: Runner.rc  main.cpp
docker/: Dockerfile.build
docs/: STATUS.md  architecture.md  data-model.md  privacy.md  protocol.md  security.md
packaging/aur/: README.md
packaging/aur/peerbeat/: .SRCINFO  PKGBUILD
packaging/aur/peerbeat-bin/: .SRCINFO  PKGBUILD
packaging/linux/: build_linux_packages.sh  io.github.ramazanberk20.PeerBeat.metainfo.xml  peerbeat.desktop
packaging/windows/: peerbeat.iss
rust/peerbeat_core/: Cargo.toml
rust/peerbeat_core/src/: frb_generated.rs  i18n.rs  lib.rs
rust/peerbeat_core/src/api/: audio.rs  library.rs  mod.rs  network.rs  system.rs
rust/peerbeat_core/src/audio/: engine.rs  engine_stub.rs  eq.rs  mod.rs  spectrum.rs  timestretch.rs  widen.rs
rust/peerbeat_core/src/db/: browse.rs  eq_presets.rs  folders.rs  history.rs  known_hosts.rs  mod.rs  playlists.rs  remembered_peers.rs  schema.rs  settings.rs  shares.rs  smart.rs  tracks.rs  transfer_log.rs
rust/peerbeat_core/src/net/: discovery.rs  mod.rs  party.rs  server.rs  tls.rs
scripts/: frb_gen.sh  gen_icons.sh
