[package]
name = "peerbeat_core"
version = "0.1.0"
edition = "2021"
description = "PeerBeat shared core: LAN protocol, library/metadata, SQLite store, desktop audio engine."
license = "GPL-3.0-or-later"
publish = false

[lib]
# `cdylib` -> the native lib loaded by Flutter on every platform.
# `staticlib` -> iOS-style static linking (unused here, kept for completeness).
# `lib`     -> so the crate's own integration tests / benches can link it.
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
# --- flutter_rust_bridge boundary ---
flutter_rust_bridge = "=2.12.0"
anyhow = "1"
thiserror = "2"
rusqlite = { version = "0.40.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
lofty = "0.24.0"
walkdir = "2.5.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
rodio = { version = "=0.19.0", default-features = false, features = ["symphonia-all"] }
symphonia = { version = "0.5.5", default-features = false, features = ["aac", "isomp4"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "fs", "sync"] }
axum = "0.8.9"
tower-http = { version = "0.6.11", features = ["fs"] }
mdns-sd = "0.20.0"
local-ip-address = "0.6.13"

# Heavier subsystem deps (tokio, rusqlite, lofty, symphonia, cpal, rustls,
# mdns-sd, ...) are added milestone-by-milestone as each module is implemented,
# to keep the M0 hello-world build fast and green.

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"      # size-optimised; audio DSP hot paths opt back in via attrs
panic = "abort"

[profile.release-audio]
inherits = "release"
opt-level = 3        # used for release builds where DSP latency matters
