[package]
name = "peerbeat_core"
version = "0.3.0"
edition = "2021"
description = "PeerBeat shared core: LAN protocol, library/metadata, SQLite store, desktop audio engine."
license = "GPL-3.0-or-later"
publish = false

[lib]
# `cdylib` -> the native lib loaded by Flutter on every platform.
# `staticlib` -> iOS-style static linking (unused here, kept for completeness).
# `lib`     -> so the crate's own integration tests / benches can link it.
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
# --- flutter_rust_bridge boundary ---
flutter_rust_bridge = "=2.12.0"
anyhow = "1"
thiserror = "2"
rusqlite = { version = "0.40.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
lofty = "0.24.0"
walkdir = "2.5.0"
notify = "8"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "fs", "sync", "time"] }
axum = { version = "0.8.9", features = ["ws"] }
tower-http = { version = "0.6.11", features = ["fs"] }
mdns-sd = "0.20.0"
local-ip-address = "0.6.13"
tower = { version = "0.5.3", features = ["util"] }
rcgen = "0.14.8"
sha2 = "0.11.0"
argon2 = "0.5"
uuid = { version = "1.23.2", features = ["v4"] }
# `-no-provider` so we use the pure-Rust `ring` provider (installed at startup),
# not the heavy aws-lc-sys C build that `tls-rustls` would force in.
axum-server = { version = "0.8.0", features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23.40", default-features = false, features = ["ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }

# The rodio audio engine is desktop-only — Android plays via ExoPlayer (Dart
# side). Excluding rodio/symphonia from Android keeps the cpal→Oboe C++ runtime
# (and its libc++ dependency, which broke `dlopen`) out of the APK entirely.
[target.'cfg(not(target_os = "android"))'.dependencies]
rodio = { version = "=0.19.0", default-features = false, features = ["symphonia-all"] }
symphonia = { version = "0.5.5", default-features = false, features = ["aac", "isomp4"] }

# Signalsmith Stretch (C++ via cc) drives pitch-preserving variable speed on
# Linux/macOS. Excluded on Android (no rodio engine there) and on Windows (its cxx
# bridge doesn't compile under MSVC — `make_unique` ambiguity); Windows falls back
# to rodio's resampling speed.
[target.'cfg(not(any(target_os = "android", target_os = "windows")))'.dependencies]
ssstretch = "0.1"

# Heavier subsystem deps (tokio, rusqlite, lofty, symphonia, cpal, rustls,
# mdns-sd, ...) are added milestone-by-milestone as each module is implemented,
# to keep the M0 hello-world build fast and green.

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"      # size-optimised; audio DSP hot paths opt back in via attrs
panic = "abort"

[profile.release-audio]
inherits = "release"
opt-level = 3        # used for release builds where DSP latency matters
